fix h3 in header on mobile

--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@ header.slideIn {
 
 @media all and (max-width: 400px) {
 
-  .land > h3 {
+  .animated.bounceInLeft {
     font-size: 11px !important;
   }
 
@@ -715,7 +715,7 @@ header.slideIn {
 
 @media all and (max-width: 320px) {
 
-  .land > h3 {
+  .animated.bounceInLeft {
     font-size: 11px !important;
   }
 
